--- a/assets/layout.css
+++ b/assets/layout.css
@@ -16,3 +16,37 @@
 .header-wrapper > .title-wrapper {
   padding-bottom:30px;
 }
+
+.chart-selector {
+  height: 100%;
+  background-color: #F5F7F9;
+}
+
+.chart-selector .list-group-item {
+  border-radius: 0;
+  height: 100px;
+  text-align: center;
+  line-height: 75px;
+  background-color: #F5F7F9;
+  color: black;
+  font-weight: 500;
+  border-bottom-color: #E9EBED;
+  border-left-color: #F5F7F9;
+  border-right-color: #F5F7F9;
+  border-top-color: #E9EBED;
+}
+
+.chart-selector .list-group-item.active {
+  background-color: #C77BB1;
+  border-color: #C77BB1;
+  color: white;
+}
+
+.chart-wrapper {
+  height: 100%;
+  border: 2px solid #EBEDEE;
+  border-left: 0;
+  margin-left: -15px;
+  padding-left: 15px;
+  padding-top: 30px;
+}
