--- a/assets/daterangepicker.css
+++ b/assets/daterangepicker.css
@@ -1,3 +1,36 @@
+.date-picker-launcher {
+  border: 1px solid #E9EBED;
+  background-color: white;
+}
+
+.glyphicon-calendar:before {
+  content: "";
+}
+
+.glyphicon-chevron-right:before {
+  content: "";
+}
+
+.glyphicon-chevron-left:before {
+  content: "";
+}
+
+.btn .caret {
+  margin-left: 10px !important;
+}
+
+[class^="glyphicon--"]:before, [class*=" glyphicon-"]:before {
+  font-family: "budicon-font" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .daterangepicker {
   position: absolute;
   color: inherit;
